directory private password file

--- a/week6/Apache;C/conf/httpd.conf
+++ b/week6/Apache;C/conf/httpd.conf
@@ -553,3 +553,10 @@ Redirect "/oldurl.html" "/newurl.html"
 
 RewriteEngine On
 RewriteRule ^/about/(.*)$ /aboutme/$1 [R,L]
+
+<Directory "/usr/local/apache2/htdocs/private">
+  AuthType Basic
+  AuthName "Authorized Users Only"
+  AuthUserFile "/usr/local/apache2/conf/passwordFile"
+  Require valid-user
+</Directory>
